<resources>
    <string name="app_name">Cooking Book</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dessert">Десерты</string>
    <string name="dinner">Ужин</string>
    <string name="all_recipes">Все рецепты</string>
    <string name="categories">Категории</string>
    <string name="bottom_menu_home">Главная</string>
    <string name="bottom_menu_category">Категории</string>
    <string name="bottom_menu_my_recipe">Мои рецепты</string>
    <string name="cancel">Отмена</string>
    <string name="btn_add_ingredient">Добавить ингредиент</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_save">Сохранить</string>
</resources>