<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/bottom_menu_home"
        app:itemTextColor="@color/colorAccent"
        app:itemIconTint="@color/colorAccent" />
    <item
        android:id="@+id/bottom_menu_category"
        app:itemIconTint="?attr/colorAccent"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/bottom_menu_category"/>
    <item
        android:id="@+id/bottom_menu_my_recipe"
        android:enabled="true"
        android:icon="@drawable/ic_restaurant_menu_white_24dp"
        android:title="@string/bottom_menu_my_recipe"/>
</menu>